syntax = "proto3";

package test.v1;

message ComplexMessage {
  string name = 1;
  repeated string tags = 2;
  map<string, int32> labels = 3;
  oneof choice {
    string text = 4;
    int32 number = 5;
  }
  NestedMessage nested = 6;
  repeated NestedMessage items = 7;
}

message NestedMessage {
  string value = 1;
}

service ComplexService {
  rpc Unary (ComplexMessage) returns (ComplexMessage);
  rpc ServerStream (ComplexMessage) returns (stream ComplexMessage);
  rpc ClientStream (stream ComplexMessage) returns (ComplexMessage);
  rpc BidiStream (stream ComplexMessage) returns (stream ComplexMessage);
}
